--- a/src/style.css
+++ b/src/style.css
@@ -78,24 +78,38 @@
     position: absolute;
     opacity: 0.9;
 }
+header{
+    position: fixed; 
+    width: 100%;
+    height: 150px;
+    background-color: rgba(16, 49, 107, 1);
+    z-index: 100;
+    margin-top: -10px;
 
+}
+header img{
+    width: 200px;
+    height: 130px;
+}
 /* Contenedor de pokemon para pintado, tipos, debilidades, caramelos */
 .contenedor{
-    position: relative;
     text-align: center;
     margin-left: 20%;
-    margin-right: -12%;
-    margin-top: 50px;
+    margin-right: -11%;
+    margin-top: 10px;
     margin-bottom: 20px;
     width: 18%;
     background-color: rgba(242, 247, 255, 1);
     font-family: 'Roboto Slab', serif;
     display: inline-flex;
     flex-direction: column;
-    justify-content: flex-end;
     border-radius:10px;
     transform-style: preserve-3d;
     transition: 2s;
+}
+.resultado{
+    display: flex;
+    flex-direction: column;
 }
 .lado{
     width: 100%;
@@ -109,7 +123,7 @@
     border-radius: 10px;
     background-image: url("https://i.pinimg.com/originals/8a/4a/72/8a4a7213b43f4ec4f99db406be655f9e.gif");
     background-position: center;
-    background-size: 165%;
+    background-size: 180%;
 }
 .a{
     display: flex;
@@ -147,7 +161,7 @@
     width: 100px;
     height: 40px;
     margin-top: 10px;
-    margin-left: 15px;
+    margin-left: 46px;
     font-family: 'Roboto Slab', serif;
     font-size: 18px;
     background:  rgba(242, 247, 255, 1);
@@ -164,60 +178,64 @@
     justify-content: center;
     cursor: pointer;
 }
-
+nav{
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    background: rgba(26, 73, 155, 0.479);
+    width: 190px;
+    height: 300px;
+    margin-top: 160px;
+    align-items: center;
+    border-radius: 15px;
+   
+}
 /* Menu Tipos de pokemon */
-.select, .select1, .ordenar, .select2{
-    position: absolute;
+.select, .select1, .ordenar{
     background-color: rgba(253, 190, 52, 1);
     width: 150px;
-    height:50px;
     font-size: 18px;
     font-family: 'Roboto Slab', serif;
-    margin-top: 80px;
-    margin-left: 10px;
-    align-items: flex-start;
+    margin-top: 60px;
     cursor: pointer; 
-    
+  
 }
+
 .select option, .select1 option{
     background-color:rgba(242, 247, 255, 1);
     color: #333333;
     text-decoration: none;
     padding: 4px;
-    width: 130px;
-    display: inline-block;      
+    width: 130px;  
 }
 
-/* Menu Caramelos de pokemon */
-.select1{
-    margin-top: 190px;
-    margin-left: 10px;    
+section{
+    margin-top: 150px;
+    margin-left: 100px;
+    
 }
+
 /* Menu Debilidades de pokemon */
  .select2{
+    position: absolute;
     background-color:  rgba(242, 247, 255, 1);
     width: 235px;
     height:30px;
-    margin-top: 18px;
-    margin-left: 850px;
+    margin-top: -130px;
+    margin-left: 1000px;
+    font-size: 18px;   
+    font-family: 'Roboto Slab', serif;
+    cursor: pointer; 
 }
 /* Menu Ordenar de A-Z y Z-A */
-.ordenar{
-    margin-top: 293px;
-    margin-left: 10px;
-}
+
 .ordenar option {
     background-color:rgba(242, 247, 255, 1);
     color: #333333;
     text-decoration: none;
     padding: 4px;
-    width: 130px;
+    width: 100px;
     display: inline-block;
-}
-.resultado{
-    display: flex;
-    flex-wrap: wrap;
-    align-content: flex-end;
 }
 
 .pintame{
@@ -225,6 +243,9 @@
     display: flex;   
     flex-wrap: wrap;
     align-content: flex-start;
+    margin-top: 150px;
+    margin-left: 100px;
+    
 }
 /* Fondo pagina 3 */
 .pagina3{
@@ -249,12 +270,12 @@
     flex-direction: column;
 }
 .logo2 img{
-    width: 70%;
+    width: 60%;
     margin-left: 25px;
 }
 .poke img{
     width: 40%;
-    margin-left: 30%;
+    margin-left: 25%;
     margin-top: 60%;
     
 }
@@ -266,8 +287,8 @@
     font-size: 45px;
     font-weight: bolder;
     text-align: center;
-    margin-top: -1300px;
-    margin-left: 110px;
+    margin-top: -1100px;
+    margin-left: 60px;
     justify-content: flex-start;
     align-content: flex-start;
 }
@@ -275,11 +296,11 @@
 /* caja donde se muestra los pokemon top10 */
 .top{
    flex-wrap: wrap;
-   margin-left: 300px;
-   width: 100%;
+   margin-left: 250px;
    cursor: pointer;
   
 }
+
 /* Buscador de Pokemones */
 .formulario{
     position: absolute;
@@ -290,17 +311,17 @@
     font-size: 18px;
     border-radius: 10px;  
     margin-left: 350px;
-    margin-top: -34px;
     background-image: url("https://i.pinimg.com/originals/ce/a3/16/cea316d0a61ede809aba53c76877cf3b.png");
     background-position: right;
     background-size: 10%;
     background-repeat: no-repeat;
+    margin-top: -130px;
 }
 footer{
     position: relative;
     width: auto;
     height: 100px;
-    background: rgb(5, 5, 104);
+    background: rgba(16, 49, 107, 1);
     display: flex;
     justify-content: center;
 }
