--- a/src/style.css
+++ b/src/style.css
@@ -204,7 +204,7 @@ nav{
     color: #333333;
     text-decoration: none;
     padding: 4px;
-    width: 130px;  
+    width: 100px;  
 }
 
 section{
@@ -345,7 +345,8 @@ footer{
     .bienvenida{
         background-size: cover;
         flex-wrap: wrap;
-    }.bienvenida:before{
+    }
+    .bienvenida:before{
         height: 50%; 
         margin-top: 50%; 
     }
@@ -370,6 +371,14 @@ footer{
         height: 40%; 
      
     }
+    header{
+        height: 120px;
+    }
+    header img{
+        width: 130px;
+        height: 78px;
+        margin-left: 45px;
+    }
      .texto p{
          align-items: center;
          width: 300px;
@@ -377,38 +386,25 @@ footer{
      .contenedor img{
            width: 100px;              
     }
-     .select1{
-         width: 100px;
+     .select1, .select, .ordenar{
+         background-color:  rgba(11, 64, 156, 1);
+         border: 0mm;
+         width: 120px;
          height: 30px;
          font-size: 15px;
-         margin-top: 45px;
-         margin-left: 123px;
+         margin-top: 15px;
     }
-     .select{
-        height: 30px;
-        width: 100px;
-        font-size: 15px;
-         margin-top: 45px;
- 
-     }
-     .ordenar{
-        height: 30px;
-         width: 100px;
-         font-size: 15px;
-         margin-top: 45px;
-         margin-left: 235px;
-     }
      .select2{
-         margin-left: 60px;
+         margin-left: 190px;
          font-size: 15px;
          width: 110px;
-         margin-top: 13px;
-
+         margin-top: -30px;
      }
+
      .formulario{
          width: 145px;
-         margin-left: 190px;
-         margin-top: -19px;
+         margin-left: 160px;
+         margin-top: -100px;
          font-size: 12px;
      }
 
@@ -417,13 +413,32 @@ footer{
          height: 20px;
          font-size: 10px;
      }
+     .pintame{
+         width: 360px;
+         font-size: 12px;
+         margin-top: 65px;
+         display: flex;
+         margin-left: 30px;
+     }
      .pagina2{
         align-content: flex-start;
      }
+     nav{
+       background-color: rgba(11, 64, 156, 1);
+       width: 70px;  
+       height: 230px;
+       overflow: hidden;
+       transition: 0.5s;
+       
+     }
+     nav:hover{
+         width: 180px;
+     }
+     
      .contenedor{
          display: flex;
          justify-content: center;
-         width: 60%;
+         width: 52%;
          height: 10%;
          line-height: 16px;
          margin: 8px;
